# aws-rust-tf-test

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: main.rs
tf_config/: main.tf
tf_config/setup_files/: init.sh
