[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
local-ip-address = "0.5.5"
public-ip = "0.2.2"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
